--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@
   VITE_storageBucket=bookcourier-ef22d.firebasestorage.app
   VITE_messagingSenderId=135180288284
   VITE_appId=1:135180288284:web:8433d14e7f406f19ff3ad9
+  VITE_image_host_key=1b36c3226ffad253704a2ac9fdbcf570
